--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
   </head>
   <body>
 
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-transparent">
+            <div class="container">
+                <div class="d-flex flex-row" style= "width: 20%;">
+                    <a class="logo"><img src="assests/imagenes/escudoformosa.png" alt="escudo de Formosa" width="50" height="50"></a>
+                </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="d-flex flex-row justify-content-start">
+                    <ul class="navbar-nav">
+                    <div class="d-flex flex-row justify-content-center" style="width: 90vw;">
+                        <li class="nav-item col-2">
+                        <a class="nav-link" aria-current="page" href="http://127.0.0.1:5500/index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item col-2">
+                        <a class="nav-link" href="http://127.0.0.1:5500/about.html">Sobre Nosotros</a>
+                        </li>
+                        <li class="nav-item col-2">
+                        <a class="nav-link" href="http://127.0.0.1:5500/contact.html">Contactos</a>
+                        </li>
+                    </div>
+                </ul>
+                </div>
+            </div>
+            </div>
+        </nav>
+    </header>
+
     <div class="container d-flex justify-content-center">
         <div class="mh-100;" style="display: flex; width: 1000px; margin: 25px;;">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
@@ -93,6 +123,24 @@
           </div>
         </div>
       </div>
+
+      <footer class="container">
+        <div class="piepagina d-flex justify-content-center row">
+            Todos los derechos reservados 2024 &copy;
+        <div class="iconos d-flex justify-content-center">
+            <div class="icono-1">
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="assests/imagenes/facebook.svg" alt="" width="40" height="40" ></a>
+            </div>
+            <div class="icono-2">
+                <a href="https://www.instagram.com/" target="_blank"><img src="assests/imagenes/instagram.svg" alt="" width="40" height="40"></a>
+            </div>
+                
+            <div class="icono-3">
+                    <a href="https://twitter.com/?lang=es" target="_blank"><img src="assests/imagenes/twitter.svg" alt="" width="40" height="40"></a>
+            </div>
+        </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
