editamos los links

--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -13,7 +13,6 @@
     <Footer></Footer>
 </body>
 </html>
-=======
 <!doctype html>
 <html lang="en">
     <head>
@@ -47,13 +46,13 @@
                         <ul class="navbar-nav">
                         <div class="d-flex flex-row justify-content-center" style="width: 90vw;">
                             <li class="nav-item col-2">
-                            <a class="nav-link" aria-current="page" href="http://127.0.0.1:5500/index.html">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                             </li>
                             <li class="nav-item col-2">
-                            <a class="nav-link" href="http://127.0.0.1:5500/about.html">Sobre Nosotros</a>
+                            <a class="nav-link" href="About.html">Sobre Nosotros</a>
                             </li>
                             <li class="nav-item col-2">
-                            <a class="nav-link" href="http://127.0.0.1:5500/contact.html">Contactos</a>
+                            <a class="nav-link" href="Contact.html">Contactos</a>
                             </li>
                         </div>
                     </ul>
@@ -127,4 +126,3 @@
         ></script>
     </body>
 </html>
->>>>>>> 42facc173f988cf4c08c18ede11318c1058084f4
