--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-body-transparent">
             <div class="container">
                 <div class="d-flex flex-row" style= "width: 20%;">
-                    <a class="logo"><img src="assests/imagenes/escudoformosa.png" alt="escudo de Formosa" width="50" height="50"></a>
+                    <a class="logo"><img src="Assets/IMG/escudoformosa.png" alt="escudo de Formosa" width="50" height="50"></a>
                 </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -27,10 +27,10 @@
                         <a class="nav-link" aria-current="page" href="http://127.0.0.1:5500/index.html">Inicio</a>
                         </li>
                         <li class="nav-item col-2">
-                        <a class="nav-link" href="http://127.0.0.1:5500/about.html">Sobre Nosotros</a>
+                        <a class="nav-link" href="About.html">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item col-2">
-                        <a class="nav-link" href="http://127.0.0.1:5500/contact.html">Contactos</a>
+                        <a class="nav-link" href="Contact.html">Contactos</a>
                         </li>
                     </div>
                 </ul>
@@ -125,19 +125,19 @@
         </div>
       </div>
 
-      <footer class="container">
+      <footer class="container-fluid">
         <div class="piepagina d-flex justify-content-center row">
             Todos los derechos reservados 2024 &copy;
         <div class="iconos d-flex justify-content-center">
             <div class="icono-1">
-                <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="assests/imagenes/facebook.svg" alt="" width="40" height="40" ></a>
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="Assets/IMG/facebook.svg" alt="" width="40" height="40" ></a>
             </div>
             <div class="icono-2">
-                <a href="https://www.instagram.com/" target="_blank"><img src="assests/imagenes/instagram.svg" alt="" width="40" height="40"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="Assets/IMG/instagram.svg" alt="" width="40" height="40"></a>
             </div>
                 
             <div class="icono-3">
-                    <a href="https://twitter.com/?lang=es" target="_blank"><img src="assests/imagenes/twitter.svg" alt="" width="40" height="40"></a>
+                    <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/IMG/twitter.svg" alt="" width="40" height="40"></a>
             </div>
         </div>
         </div>
