Se finalizo la pagina

--- a/Contact.html
+++ b/Contact.html
@@ -1,18 +1,4 @@
 
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Styles.css/Contact.css">
-</head>
-<body>
-    <Nav></Nav>
-    
-    <Footer></Footer>
-</body>
-</html>
 <!doctype html>
 <html lang="en">
     <head>
@@ -28,7 +14,7 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="Styles.css/Contact.css">
+        <link rel="stylesheet" href="Styles/Contact.css">
     </head>
 
     <body>
@@ -96,6 +82,7 @@
             </div>
             </div>
         </main>
+
         <footer class="container">
             <div class="piepagina d-flex justify-content-center row">
                 Todos los derechos reservados 2024 &copy;
